fix(dropdown): removed horizontal scroll

--- a/packages/components/dropdown/dropdown.scss
+++ b/packages/components/dropdown/dropdown.scss
@@ -32,7 +32,9 @@
 }
 
 .kbq-dropdown__panel {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+
     min-width: var(--kbq-dropdown-size-container-width-min);
     max-width: var(--kbq-dropdown-size-container-width-max);
 
